# website

./: .gitignore  stack.yaml
website/: about.md  about.rst  contact.markdown  index.html  site.hs  website.cabal
website/css/: .default.css.bak  acd.hs  default.css  defbak  modified-hugo-academic.css
website/pages/: 2017-10-17-polydep.tex  2017-10-17-polydep.xtex.metadata
website/pages/auto/: 2017-10-17-polydep.el  polydep.el
website/pubs/: 2011-12-01-rns-encoding.md  2017-09-19-semantic-security.md  2018-02-01-down-with-communication-mpc.md  2018-02-01-private-credible-vickrey-auctions.md  2020-01-01-optimal-practical-communication-locality-almost-mpc.md  2020-11-01-lifting-standard-setup-assumptions.md
website/scripts/: #jquery-3.2.1.min.js#  abstract.js
website/templates/: default.html  pub-list.html  pub.html  pubs.html
