name:               website
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:   base
                  ,hakyll == 4.*
                  , bytestring
                  , hjsmin
  ghc-options:      -threaded -fllvm
  default-language: GHC2021
